pkg/monitors/appinsights/ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    "monitor.stakater.com/enabled": "true"
#   "monitor.stakater.com/healthEndpoint": "/api/status"
    "monitor.stakater.com/name": "bar"
    "monitor.stakater.com/forceHttps" : "true"
    "appinsights.monitor.stakater.com/statuscode": "200"
    "appinsights.monitor.stakater.com/retryenable": "false"
    "appinsights.monitor.stakater.com/frequency": "900"
spec:
  rules:
  - host: microsoft.com
    http:
      paths:
      - backend:
          serviceName: my-nginx
          servicePort: 80
